Added API for pausing a job request
